# binary-parsing

./: .gitignore  CMakeLists.txt  LICENSE  README.md
cmake/: get_gtest.cmake
include/binary-parsing/: binary-parsing.hpp  export.hpp
include/binary-parsing/common/: byte_array.hpp  types.hpp
include/binary-parsing/elf/: core.hpp
src/: binary-parsing.cpp
tests/: CMakeLists.txt  simple_test.cpp
tests/cli/: CMakeLists.txt  cli.cpp
tests/curl_tests/: CMakeLists.txt
